--- a/Hans_Test_Script.ipynb
+++ b/Hans_Test_Script.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello World\")"
+    "print(\"Hello World\")\n",
+    "print(\"Hello again world\")"
    ]
   }
  ],
