Further GitHub Testing

--- a/Hans_Test_Script.ipynb
+++ b/Hans_Test_Script.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "print(\"Hello World\")\n",
-    "print(\"Hello again world\")"
+    "print(\"Hello again world\")\n",
+    "print(\"Checking GitHub\")"
    ]
   }
  ],
