Clear the import, add the date of the day as limit

--- a/Python_notebooks/satellite_data_download.ipynb
+++ b/Python_notebooks/satellite_data_download.ipynb
@@ -10,42 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Work\\OneDrive - NOC\\Documents\\PARTITRICS\\PARTITRICS_Python_Hans\\PARTITRICS_conda_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# I think a lot of these are unnecessary!\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import json\n",
-    "import requests\n",
-    "import shutil\n",
     "import os\n",
-    "import gzip\n",
     "import copernicusmarine as cpm\n",
-    "import re\n",
-    "import ast\n",
     "from pathlib import Path\n",
-    "import re\n",
-    "from tqdm import tqdm\n",
-    "from urllib.request import urlretrieve\n",
-    "import xarray as xr\n",
-    "import matplotlib.patches as mpatches\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from glob import glob\n",
-    "from datetime import datetime\n",
-    "from scipy import interpolate\n",
-    "from pprint import pprint\n"
+    "import ast\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -57,18 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'data' folder already exists in the parent directory.\n",
-      "'satellite' directory already exists inside 'data' folder.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_missing_directories():\n",
     "    # Define the path to the parent directory\n",
@@ -108,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,8 +120,14 @@
     "\n",
     "variables_to_extract = [var_to_extract] # Input for variable must be list\n",
     "\n",
-    "start_time = \"2024-04-01T00:00:00\" # Format time as YYYY-MM-DD\"T\"HH:MM:SS ,without T in parenthesis\n",
-    "end_time   = \"2024-05-04T23:59:59\"\n",
+    "start_time = \"2024-04-20T00:00:00\" # Format time as YYYY-MM-DD\"T\"HH:MM:SS ,without T in parenthesis\n",
+    "\n",
+    "# Get the current date and time\n",
+    "now = datetime.now()\n",
+    "# Format the date and time\n",
+    "formatted_date = now.strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
+    "#set it as the end time\n",
+    "end_time   = formatted_date\n",
     "\n",
     "min_depth = 0 # Primarily interested in surface values only. Will flag if outside of range of product\n",
     "max_depth = 1\n",
@@ -164,31 +135,32 @@
     "min_lon = -35 # Same lat/lons from autonomy visualisation, can be freely changed\n",
     "max_lon = -5\n",
     "min_lat = 55\n",
-    "max_lat = 66\n",
+    "max_lat = 65\n",
     "\n",
     "saved_netCDF_as = \"CMEMS_Iceland_Basin_CHLA_April-May2024.nc\" # This changes the name of the output file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-10T12:53:28Z - Dataset version was not specified, the latest one was selected: \"202303\"\n",
-      "INFO - 2024-05-10T12:53:28Z - Dataset part was not specified, the first one was selected: \"default\"\n",
-      "INFO - 2024-05-10T12:53:36Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
-      "WARNING - 2024-05-10T12:53:42Z - Some or all of your subset selection [55, 66] for the latitude dimension  exceed the dataset coordinates [20.002777099609375, 65.99722290039062]\n",
-      "INFO - 2024-05-10T12:53:42Z - Downloading using service arco-geo-series...\n",
-      "INFO - 2024-05-10T12:53:49Z - <xarray.Dataset> Size: 1GB\n",
-      "Dimensions:    (time: 34, latitude: 1980, longitude: 5400)\n",
+      "INFO - 2024-05-17T09:30:15Z - Dataset version was not specified, the latest one was selected: \"202303\"\n",
+      "INFO - 2024-05-17T09:30:15Z - Dataset part was not specified, the first one was selected: \"default\"\n",
+      "INFO - 2024-05-17T09:30:25Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
+      "WARNING - 2024-05-17T09:30:34Z - Some or all of your subset selection [55, 66] for the latitude dimension  exceed the dataset coordinates [20.002777099609375, 65.99722290039062]\n",
+      "WARNING - 2024-05-17T09:30:34Z - Some or all of your subset selection [2024-04-20 00:00:00, 2024-05-17 10:30:11] for the time dimension  exceed the dataset coordinates [2023-04-25 00:00:00, 2024-05-15 00:00:00]\n",
+      "INFO - 2024-05-17T09:30:34Z - Downloading using service arco-geo-series...\n",
+      "INFO - 2024-05-17T09:30:44Z - <xarray.Dataset> Size: 1GB\n",
+      "Dimensions:    (time: 26, latitude: 1980, longitude: 5400)\n",
       "Coordinates:\n",
       "  * latitude   (latitude) float32 8kB 55.0 55.01 55.01 ... 65.99 65.99 66.0\n",
       "  * longitude  (longitude) float32 22kB -35.0 -34.99 -34.99 ... -5.008 -5.003\n",
-      "  * time       (time) datetime64[ns] 272B 2024-04-01 2024-04-02 ... 2024-05-04\n",
+      "  * time       (time) datetime64[ns] 208B 2024-04-20 2024-04-21 ... 2024-05-15\n",
       "Data variables:\n",
       "    CHL        (time, latitude, longitude) float32 1GB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
       "Attributes: (12/92)\n",
@@ -204,40 +176,39 @@
       "    title:                           cmems_obs-oc_atl_bgc-plankton_nrt_l3-olc...\n",
       "    westernmost_longitude:           -46.0\n",
       "    westernmost_valid_longitude:     -46.0\n",
-      "    copernicusmarine_version:        1.2.0\n",
-      "INFO - 2024-05-10T12:53:49Z - Estimated size of the dataset file is 1387.511 MB.\n",
-      "Do you want to proceed with download? [Y/n]:Error: invalid input\n",
-      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-10T12:55:01Z - Writing to local storage. Please wait...\n"
+      "    copernicusmarine_version:        1.2.2\n",
+      "INFO - 2024-05-17T09:30:44Z - Estimated size of the dataset file is 1061.038 MB.\n",
+      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-17T09:30:48Z - Writing to local storage. Please wait...\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 7550/7550 [00:14<00:00, 537.04it/s]"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc32d7ed806841d69a69ed957aa4f492",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5774 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-10T12:55:16Z - Successfully downloaded to c:\\Users\\Work\\OneDrive - NOC\\Documents\\PARTITRICS\\PARTITRICS_Python_Hans\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024.nc\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "INFO - 2024-05-17T09:31:13Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024_(1).nc\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "WindowsPath('c:/Users/Work/OneDrive - NOC/Documents/PARTITRICS/PARTITRICS_Python_Hans/biocarbon_nrt_data_viz/data/satellite/CMEMS_Iceland_Basin_CHLA_April-May2024.nc')"
+       "WindowsPath('c:/Users/flapet/OneDrive - NOC/Documents/NRT_viz/biocarbon_nrt_data_viz/data/satellite/CMEMS_Iceland_Basin_CHLA_April-May2024_(1).nc')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
