Download all vars

--- a/Python_notebooks/satellite_data_download.ipynb
+++ b/Python_notebooks/satellite_data_download.ipynb
@@ -31,9 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data' folder already exists in the parent directory.\n",
+      "'satellite' directory already exists inside 'data' folder.\n"
+     ]
+    }
+   ],
    "source": [
     "def create_missing_directories():\n",
     "    # Define the path to the parent directory\n",
@@ -73,32 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['CHL', 'CHL_uncertainty', 'flags']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# \n",
-    "catalogue_search_term = \"cmems_obs-oc_atl_bgc-plankton_nrt_l3-olci-300m_P1D\"\n",
+    "dataset_to_extract = 'cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D' # for chla\n",
     "\n",
-    "satellite_catalogue = cpm.describe(contains=[catalogue_search_term], include_datasets=True, overwrite_metadata_cache=False) # Last command set to true ensures cache is up to date, i.e. browsing the latest catalogue. \n",
-    "dataset_to_sample = satellite_catalogue['products'][0]['datasets'][0] # Define dataset to sample for next code block.\n",
-    "vars_in_dataset   = [f\"{[variable['short_name'] for variable in service['variables']]}\" for service in dataset_to_sample['versions'][0]['parts'][0]['services']]\n",
-    "\n",
-    "dataset_to_extract = list(dataset_to_sample.values())\n",
-    "dataset_to_extract = dataset_to_extract[0]\n",
-    "\n",
-    "vars_in_dataset = vars_in_dataset[0]\n",
-    "vars_in_dataset_as_list = ast.literal_eval(vars_in_dataset)\n",
-    "print(vars_in_dataset_as_list)\n",
-    "var_to_extract = vars_in_dataset_as_list[0] # Index the variables you want"
+    "#dataset_to_extract = 'cmems_obs-oc_atl_bgc-optic_nrt_l3-multi-1km_P1D' # for bbp"
    ]
   },
   {
@@ -110,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +108,7 @@
     "data_dir      = os.path.join(parent_dir, 'data')\n",
     "satellite_dir = os.path.join(data_dir, 'satellite')\n",
     "\n",
-    "variables_to_extract = [var_to_extract] # Input for variable must be list\n",
+    "#variables_to_extract = [var_to_extract] # Input for variable must be list\n",
     "\n",
     "start_time = \"2024-04-20T00:00:00\" # Format time as YYYY-MM-DD\"T\"HH:MM:SS ,without T in parenthesis\n",
     "\n",
@@ -132,8 +122,8 @@
     "min_depth = 0 # Primarily interested in surface values only. Will flag if outside of range of product\n",
     "max_depth = 1\n",
     "\n",
-    "min_lon = -35 # Same lat/lons from autonomy visualisation, can be freely changed\n",
-    "max_lon = -5\n",
+    "min_lon = -25 # Same lat/lons from autonomy visualisation, can be freely changed\n",
+    "max_lon = -10\n",
     "min_lat = 55\n",
     "max_lat = 65\n",
     "\n",
@@ -142,27 +132,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-17T09:30:15Z - Dataset version was not specified, the latest one was selected: \"202303\"\n",
-      "INFO - 2024-05-17T09:30:15Z - Dataset part was not specified, the first one was selected: \"default\"\n",
-      "INFO - 2024-05-17T09:30:25Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
-      "WARNING - 2024-05-17T09:30:34Z - Some or all of your subset selection [55, 66] for the latitude dimension  exceed the dataset coordinates [20.002777099609375, 65.99722290039062]\n",
-      "WARNING - 2024-05-17T09:30:34Z - Some or all of your subset selection [2024-04-20 00:00:00, 2024-05-17 10:30:11] for the time dimension  exceed the dataset coordinates [2023-04-25 00:00:00, 2024-05-15 00:00:00]\n",
-      "INFO - 2024-05-17T09:30:34Z - Downloading using service arco-geo-series...\n",
-      "INFO - 2024-05-17T09:30:44Z - <xarray.Dataset> Size: 1GB\n",
-      "Dimensions:    (time: 26, latitude: 1980, longitude: 5400)\n",
+      "INFO - 2024-05-17T14:50:50Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
+      "INFO - 2024-05-17T14:50:50Z - Dataset part was not specified, the first one was selected: \"default\"\n",
+      "INFO - 2024-05-17T14:50:57Z - Service was not specified, the default one was selected: \"arco-time-series\"\n",
+      "WARNING - 2024-05-17T14:51:02Z - Some or all of your subset selection [2024-04-20 00:00:00, 2024-05-17 15:50:46] for the time dimension  exceed the dataset coordinates [2024-04-27 23:00:00, 2024-05-16 00:00:00]\n",
+      "INFO - 2024-05-17T14:51:02Z - Downloading using service arco-time-series...\n",
+      "INFO - 2024-05-17T14:51:09Z - <xarray.Dataset> Size: 3GB\n",
+      "Dimensions:              (time: 19, latitude: 960, longitude: 1440)\n",
       "Coordinates:\n",
-      "  * latitude   (latitude) float32 8kB 55.0 55.01 55.01 ... 65.99 65.99 66.0\n",
-      "  * longitude  (longitude) float32 22kB -35.0 -34.99 -34.99 ... -5.008 -5.003\n",
-      "  * time       (time) datetime64[ns] 208B 2024-04-20 2024-04-21 ... 2024-05-15\n",
-      "Data variables:\n",
-      "    CHL        (time, latitude, longitude) float32 1GB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "  * latitude             (latitude) float32 4kB 55.01 55.02 ... 64.98 64.99\n",
+      "  * longitude            (longitude) float32 6kB -24.99 -24.98 ... -10.02 -10.01\n",
+      "  * time                 (time) datetime64[ns] 152B 2024-04-28 ... 2024-05-16\n",
+      "Data variables: (12/21)\n",
+      "    CHL                  (time, latitude, longitude) float32 105MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    CHL_uncertainty      (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    DIATO                (time, latitude, longitude) float32 105MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    DIATO_uncertainty    (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    DINO                 (time, latitude, longitude) float32 105MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    DINO_uncertainty     (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    ...                   ...\n",
+      "    PICO_uncertainty     (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    PROCHLO              (time, latitude, longitude) float32 105MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    PROCHLO_uncertainty  (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    PROKAR               (time, latitude, longitude) float32 105MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    PROKAR_uncertainty   (time, latitude, longitude) float64 210MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
+      "    flags                (time, latitude, longitude) int8 26MB dask.array<chunksize=(5, 256, 256), meta=np.ndarray>\n",
       "Attributes: (12/92)\n",
       "    Conventions:                     CF-1.8, ACDD-1.3\n",
       "    DPM_reference:                   GC-UD-ACRI-PUG\n",
@@ -172,24 +173,24 @@
       "    cmems_product_id:                OCEANCOLOUR_ATL_BGC_L3_NRT_009_111\n",
       "    ...                              ...\n",
       "    time_coverage_resolution:        P1D\n",
-      "    time_coverage_start:             2023-04-24T20:56:59Z\n",
-      "    title:                           cmems_obs-oc_atl_bgc-plankton_nrt_l3-olc...\n",
+      "    time_coverage_start:             2023-10-15T06:57:27Z\n",
+      "    title:                           cmems_obs-oc_atl_bgc-plankton_nrt_l3-mul...\n",
       "    westernmost_longitude:           -46.0\n",
       "    westernmost_valid_longitude:     -46.0\n",
       "    copernicusmarine_version:        1.2.2\n",
-      "INFO - 2024-05-17T09:30:44Z - Estimated size of the dataset file is 1061.038 MB.\n",
-      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-17T09:30:48Z - Writing to local storage. Please wait...\n"
+      "INFO - 2024-05-17T14:51:09Z - Estimated size of the dataset file is 2105.258 MB.\n",
+      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-17T14:51:11Z - Writing to local storage. Please wait...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc32d7ed806841d69a69ed957aa4f492",
+       "model_id": "5d9f33c1cdfe430dae7369cc02195f26",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5774 [00:00<?, ?it/s]"
+       "  0%|          | 0/17546 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -199,23 +200,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO - 2024-05-17T09:31:13Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024_(1).nc\n"
+      "INFO - 2024-05-17T14:52:24Z - Successfully downloaded to c:\\Users\\flapet\\OneDrive - NOC\\Documents\\NRT_viz\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024.nc\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "WindowsPath('c:/Users/flapet/OneDrive - NOC/Documents/NRT_viz/biocarbon_nrt_data_viz/data/satellite/CMEMS_Iceland_Basin_CHLA_April-May2024_(1).nc')"
+       "WindowsPath('c:/Users/flapet/OneDrive - NOC/Documents/NRT_viz/biocarbon_nrt_data_viz/data/satellite/CMEMS_Iceland_Basin_CHLA_April-May2024.nc')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cpm.subset(dataset_id=dataset_to_extract,\n",
-    "  variables=variables_to_extract,\n",
     "  minimum_longitude= min_lon,\n",
     "  maximum_longitude= max_lon,\n",
     "  minimum_latitude= min_lat,\n",
